--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "npx nodemon --exec npx babel-node src/server.js"
+    "dev": "npx nodemon --exec npx babel-node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.22.6",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongosh": "^1.10.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.9",
